# simple-raytracer

./: .gitmodules  CMakeLists.txt  README.md
ass_3/: CMakeLists.txt  README.md
ass_3/src/: Camera.h  Helpers.h  Light.h  Path.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  SceneObject.h  SceneReader.cpp  SceneReader.h  Sphere.cpp  Sphere.h  main.cpp
ass_3/src/resources/scenes/grading_scenes/: scene2.txt
src/: Camera.h  Helpers.h  Light.h  Path.h  Plane.cpp  Plane.h  Ray.h  Scene.cpp  Scene.h  SceneObject.h  SceneReader.cpp  SceneReader.h  Sphere.h  main.cpp
src/resources/scenes/grading_scenes/: scene1.txt  scene3.txt  scene4.txt
